# wirebit

./: .envrc  .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  NAME  PROJECT  README.md  RINGBUFFER.md  RINGBUFFER_ISSUE.md  xmake.lua
examples/: can_bus_hub.cpp  can_demo.cpp  can_node.cpp  ethernet_demo.cpp  frame_demo.cpp  link_simulation.cpp  main.cpp  pty_demo.cpp  serial_demo.cpp  socketcan_demo.cpp  tap_demo.cpp  tun_demo.cpp
include/isobus/: isobus.hpp
include/wirebit/: endpoint.hpp  frame.hpp  link.hpp  model.hpp  wirebit.hpp
include/wirebit/can/: can_endpoint.hpp  socketcan_link.hpp
include/wirebit/common/: time.hpp  types.hpp
include/wirebit/eth/: eth_endpoint.hpp  tap_link.hpp  tun_link.hpp
include/wirebit/serial/: pty_link.hpp  serial_endpoint.hpp  tty_link.hpp
include/wirebit/shm/: handshake.hpp  ring.hpp  shm_link.hpp
misc/sudoers.d/: wirebit
src/isobus/: isobus.cpp
src/wirebit/: wirebit.cpp
test/: isobus_test.cpp  test_can.cpp  test_can_broadcast.cpp  test_eth_bandwidth.cpp  test_ethernet.cpp  test_eventfd.cpp  test_frame.cpp  test_model.cpp  test_pty_link.cpp  test_ring.cpp  test_serial.cpp  test_serial_timing.cpp  test_shm_simple.cpp  test_shmlink.cpp  test_socketcan_link.cpp  test_tap_link.cpp  test_tun_link.cpp  test_vcan_verify.cpp
